7 - ingress/k8s/service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
