7 - ingress/k8s/service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
